<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/oaoaData"
            android:layout_width="344dp"
            android:layout_height="76dp"
            android:id="@+id/oaoaDataTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintTop_toBottomOf="@+id/conversionDataTitle2" android:gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kotlin_sample_app"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp" android:textStyle="bold" android:textAllCaps="true"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conversionDataTextView"
            app:layout_constraintBottom_toTopOf="@+id/textView4" android:id="@+id/view"/>
    <Button
            android:text="@string/simple_in_app_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/simpleInAppEventsBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.71" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/conversion_data"
            android:layout_width="357dp"
            android:layout_height="92dp"
            android:id="@+id/conversionDataTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/conversionDataTitle"
            android:gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conversionDataTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/conversion_data_title"
            android:textStyle="bold" android:textAllCaps="false" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/oaoaDataTextView" app:layout_constraintHorizontal_bias="0.503"/>
    <TextView
            android:text="@string/deep_link_data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conversionDataTitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textStyle="bold"
    />
    <Button
            android:text="@string/custom_in_app_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customInAppEventsBtn" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/sample_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/simpleInAppEventsBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/customInAppEventsBtn" app:layout_constraintVertical_bias="0.163"
            android:gravity="center"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline4" app:layout_constraintGuide_begin="-2dp"
                                                android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline5" app:layout_constraintGuide_begin="0dp"
                                                android:orientation="vertical"/>
    <TextView
            android:text="@string/in_app_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/simpleInAppEventsBtn"
            android:layout_marginTop="8dp" android:textSize="18sp" android:scrollbars="vertical"
    />

</androidx.constraintlayout.widget.ConstraintLayout>